Reworked the file saving and uploading experience. This new version allows the user to continue to navigate throughout the app while files are being processed, save and uploaded in the background. AFS shows a verbose notification card when the user is viewing the file-sources overlay and files become ready to upload. But if the user has navigated away from file-sources, AFS shows an unobtrusive toast instead.

--- a/modals/app-file-system-save-as-modal.html
+++ b/modals/app-file-system-save-as-modal.html
@@ -12,12 +12,12 @@
   }
 
   #skip-btn {
-    color: var(--app-primary-color);
+    color: var(--app-accent-color);
   }
 
   #update-btn {
-    background-color: var(--app-primary-color);
-    color:            var(--app-primary-color-text);
+    background-color: var(--app-accent-color);
+    color:            var(--app-accent-color-text);
   }
 
 </style>
@@ -31,11 +31,11 @@
 
     <div id="modal-items">
       <template id="repeater"
-      					is="dom-repeat" 
+                is="dom-repeat" 
                 items="[[_files]]">
 
         <save-as-modal-input-item item="[[item]]"
-        													on-input-item-value-changed="__itemValueChanged">
+                                  on-input-item-value-changed="__itemValueChanged">
         </save-as-modal-input-item>
 
       </template>
