--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -56,9 +56,11 @@
 
   <app-header-overlay id="overlay"
                       header-size="1"
+                      parent-controls-exits
                       prebuilt-animation="from-top"
                       fixed-header
                       title="Add Files"
+                      on-header-overlay-back="__back"
                       on-overlay-reset="__reset">
 
 
