Migrated from old oriented cloud processing version to the new video specific poster image. Updated several functions to be fault tolerant of a missing thumbnail. Updated storage delete promises to fail gracefully independent of one another. Unified save as and delete modal scroll area styles. Updated deps.

--- a/lists/processing-error-icon.html
+++ b/lists/processing-error-icon.html
@@ -32,7 +32,8 @@
 </style>
 
 
-<paper-menu-button id="menu">
+<paper-menu-button id="menu" 
+									 dynamic-align>
 
 	<iron-icon icon="app-icons:error" 
 						 slot="dropdown-trigger">
