--- a/modals/app-file-system-delete-modal.html
+++ b/modals/app-file-system-delete-modal.html
@@ -1,23 +1,33 @@
 
 <style include="app-shared-styles">
 
-	.item {
-		display: 		 flex;
-		align-items: center;
-		margin: 		 16px 0px;
-	}
+  #modal {
+    --modal-card-content-padding: 0px;
+  }
+
+  #content {
+    padding:          8px 16px;
+    background-color: var(--app-body-color);
+  }
+
+  .item {
+    display:     flex;
+    align-items: center;
+    margin:      16px 0px;
+  }
 
   file-thumbnail {
     height:       64px;
-    min-height: 	64px;
+    min-height:   64px;
     width:        64px;
     min-width:    64px;
     margin-right: 8px;
+    --thumbnail-background-color: inherit;
   }
 
-  strong {
-    color:     var(--app-primary-color);
-    font-size: 20px;
+  #note {
+    color:     var(--secondary-text-color);
+    font-size: 14px;
   }
 
   #dismiss-btn {
@@ -35,26 +45,29 @@
 <app-modal id="modal"
            heading="Confirm Delete">
 
-  <div slot="card-content-slot">
+  <div id="content"
+       slot="card-content-slot">
+
+    <p id="note">
+      This action CANNOT be undone!
+    </p>
+
     <template id="repeater"
-    					is="dom-repeat"
+              is="dom-repeat"
               items="[[_items]]">
 
       <div class="item">
         <file-thumbnail item="[[item]]" 
-				                presentation 
-				                sizing="contain">
-				</file-thumbnail>
-				<strong class="shared-no-select shared-single-line-truncate">
-					[[item.displayName]]
-				</strong>
+                        presentation 
+                        sizing="contain">
+        </file-thumbnail>
+        <span class="shared-no-select shared-single-line-truncate">
+          [[item.displayName]]
+        </span>
       </div>
 
-    </template>
-    
-    <p>
-      This action CANNOT be undone!
-    </p>
+    </template>   
+
   </div>
 
   <div slot="card-actions-slot">
