--- a/shared/file-thumbnail.html
+++ b/shared/file-thumbnail.html
@@ -8,7 +8,8 @@
     position:        relative;  
     height:          100%;
     overflow:        hidden;
-    --thumbnail-border-radius: inherit; /* Another Safari fix. */
+    --thumbnail-background-color: var(--app-background-color);
+    --thumbnail-border-radius:    inherit; /* Another Safari fix. */
   }
 
   .watermark {
@@ -24,11 +25,13 @@
   }
 
   lazy-image {
-    display: flex;
+    display:          flex;
+    background-color: var(--thumbnail-background-color);
   }
 
   lazy-video {
-    border-radius: var(--thumbnail-border-radius); /* Safari fix. */
+    border-radius:            var(--thumbnail-border-radius); /* Safari fix. */
+    --video-background-color: var(--thumbnail-background-color);
   }
 
   .movie-icon {
