Another quality of life pass. List overlays now automatically close when all items are deleted. The multiselect button now resets after a delete operation. Now showing a custom animated icon and message placeholder when list overlays are opened but empty. Fixed incorrectly named declarative on-overlay-reset properties on several overlays.

--- a/editors/file-editor.html
+++ b/editors/file-editor.html
@@ -47,7 +47,7 @@
                     reveal-header
                     title="[[_title]]"
                     on-overlay-exiting="__hideFab"
-                    on-reset="__resetFab">
+                    on-overlay-reset="__resetFab">
 
 
   <lazy-image alt="[[item.displayName]]"
