--- a/lists/file-list.html
+++ b/lists/file-list.html
@@ -15,7 +15,7 @@
                     prebuilt-animation="from-right"
                     reveal-header
                     title="My Files"
-                    on-reset="__reset">
+                    on-overlay-reset="__reset">
 
 
   <multiselect-btns id="multi"
