The list-icon-button of file-sources is now shows upload and processing animations independent of whether a list overlay is open or not. The empty list placeholder now has a slight delay before fading in so it does not flash before items are returned from the overlay subscription when there are items in the db.

--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -78,8 +78,8 @@
     </div>
 
 
-    <list-icon-button count="[[_dbCount]]"
-                      data="[[data]]"
+    <list-icon-button coll="[[coll]]"
+                      count="[[_dbCount]]"
                       list="[[list]]"
                       slot="top-toolbar-buttons-slot"
                       on-click="__listBtnClicked">
