--- a/lists/afs-empty-list-placeholder.html
+++ b/lists/afs-empty-list-placeholder.html
@@ -2,20 +2,17 @@
 <style>
 	
 	:host {
-		display: 				flex;
+		display: 				none;
 		flex-direction: column;
 		align-items: 		center;
 		position: 			absolute;
 		top: 						160px;
 		left: 					0px;
 		width: 					100%;
-		opacity: 				0.3;
+		opacity: 				0;
+		transition:  		opacity 0.3s ease-in 0.8s;
 		color: 					var(--app-primary-color);
 		z-index: 			 -1;
-	}
-
-	:host([hidden]) {
-		display: none;
 	}
 
 	afs-list-placeholder-icon {
