Now camera-roll items can be accessed via keyboard tabbing. Added keyboard only focus styles that outline the focused item and allow enter key commands to open the photo-carousel. Fixed an issue with photo-carousel entry animation where the current image would flicker black while switching between the flip animation element and the current carousel item. Now waiting for the current image or poster to load before making the switch. The carousel now closes itself after the last photo has been deleted.

--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -123,6 +123,7 @@
                       slot="content"
                       on-carousel-ready="__carouselReady"
                       on-centered-item-changed="__centeredItemChanged"
+                      on-last-item-deleted="__lastItemDeleted"
                       on-photo-selected="__photoSelected">
   </paginated-carousel>
 
