Another quality of life and bug fix pass. This includes fixes that improve the reliability of the web import cancel functionality. The paginated photo carousel now has a more stable and reliable method to correctly realign the scroller after prepending new elements to the beginning of the list when paginating to the left. This new method is dynamic and only retries aligning the carousel when unsuccessful. This greatly improves performance in browsers that allow js to change the scroll position of elements more easily such as Chrome and Firefox. File sources ui facelift. Added a new dynamic background gradient that adapts to dark and light mode. Several other minor bug fixes and style tweaks.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -1,6 +1,20 @@
 
 <style>
 
+  :host {
+
+    --light-mode-gradient: var(--app-light-color) 100%;
+    --dark-mode-gradient:  var(--app-dark-color)  180%;
+
+    --gradient-end: var(--light-mode-gradient);
+
+    --afs-gradient-background: radial-gradient(
+      ellipse at top left, 
+      var(--app-background-color) 40%, 
+      var(--gradient-end)
+    );
+  }
+
   #spinner {
     z-index: 2;
   }
