--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -39,8 +39,8 @@
   }
 
   #label {
-    position:         relative;
-    background-color: inherit; /* For <processing-icon> */
+    position:   relative;
+    background: var(--afs-gradient-background);
   }
 
   #label-name {
@@ -64,6 +64,7 @@
   }
 
   #label-stats {
+    
     /* 
       Truncate text and don't push 
       more-vert icon-button out of view. 
