--- a/lists/processing-icon.html
+++ b/lists/processing-icon.html
@@ -7,9 +7,9 @@
 		width: 	 	28px;
 		position: absolute;
     right: 		4px;
-    bottom: 	4px;
+    bottom: 	6px; /* So the icon completely covers the icon-button behind it. */
     padding: 	4px;
-    background-color: inherit;
+    background-color: transparent;
 		color: 	 					var(--app-dark-color);
 		transition: 			transform 0.2s var(--custom-ease);
 		transform:  			scale(0, 0);
