--- a/editors/file-editor.html
+++ b/editors/file-editor.html
@@ -6,6 +6,8 @@
   }
 
   #overlay {
+    background: var(--afs-gradient-background);
+
     --overlay-toolbar-background-parallax-height: 120%;
     --overlay-toolbar-vignette-opacity:           0.5;
   }
