--- a/lists/camera-roll.html
+++ b/lists/camera-roll.html
@@ -6,6 +6,8 @@
   }
       
   #overlay {
+    padding-bottom: 0px;
+
     --overlay-toolbar-backdrop-filter:  blur(10px);
     --overlay-toolbar-background-color: transparent;
     --overlay-toolbar-color:            var(--app-dark-color-text);
@@ -30,6 +32,16 @@
   #header-color-background {
     opacity:          0.7;
     background-color: var(--app-dark-color);
+  }
+
+  /* A non-scrolling faux background. */
+  #content-background {
+    position:   fixed;
+    top:        0px;
+    left:       0px;
+    height:     100vh;
+    width:      100vw;
+    background: var(--afs-gradient-background);
   }
 
   #scale {
@@ -100,6 +112,11 @@
                     on-all-changed="__allChanged"
                     on-hide-checkboxes-changed="__hideCheckboxesChanged">
   </multiselect-btns>
+
+
+  <div id="content-background"
+       slot="content">
+  </div>
 
 
   <afs-empty-list-placeholder hidden="[[_hidePlaceholder]]" 
