--- a/shared/file-icons.html
+++ b/shared/file-icons.html
@@ -50,7 +50,6 @@
       <g id="file-download">
         <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
       </g>
-      <!-- drop-zone -->
       <g id="file-upload">
         <path d="M9 16h6v-6h4l-7-7-7 7h4zm-4 2h14v2H5z"/>
       </g>
@@ -93,6 +92,10 @@
       <!-- file-list -->
       <g id="low-priority">
         <path d="M14 5h8v2h-8zm0 5.5h8v2h-8zm0 5.5h8v2h-8zM2 11.5C2 15.08 4.92 18 8.5 18H9v2l3-3-3-3v2h-.5C6.02 16 4 13.98 4 11.5S6.02 7 8.5 7H12V5H8.5C4.92 5 2 7.92 2 11.5z"/>
+      </g>
+      <!-- drop-zone -->
+      <g id="move-to-inbox">
+        <path d="M19 3H4.99c-1.11 0-1.98.9-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10zm-3-5h-2V7h-4v3H8l4 4 4-4z"/>
       </g>
       <!-- file-thumbnail video watermark-->
       <g id="movie">
