More quality of life and bug fix path. Photo-carousel now allows vertical scrolling because no fixed versions worked well in iOS Safari with its nav collapse on scroll action. Performance and reliablity improvements involving entry animations with photo-carousel and photo-viewer. Image editor now uses the thumbnail file for the filter option previews to reduce the overall memory footprint and improve loading performance. Fixed a bug where the image editor could be scrolled horizontally in Safari. Updated deps.

--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -3,7 +3,6 @@
 
   #background,
   #carousel {
-    position: fixed;
     top:      0px;
     left:     0px;
     height:   100vh;
@@ -12,6 +11,7 @@
   }
   
   #background {
+    position:   fixed;
     display:    none;
     transition: opacity 0.2s linear 0.3s;
     opacity:    0;
@@ -19,13 +19,6 @@
   }
 
   #overlay {
-
-    /*
-      Addresses the carousel jumping up suddenly on exit.
-    */
-    padding:       0px;
-    margin-bottom: 128px;
-
     box-shadow: none;
 
     --overlay-background-color:                   transparent;    
@@ -60,6 +53,7 @@
   }
 
   #carousel {
+    position: absolute;
     
     /*
       iOS Safari fix for initial positioning being 
