--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -27,6 +27,10 @@
     --paper-tabs-selection-bar-color: var(--app-primary-color-text);
   }
 
+  #pages {
+    width: 100vw; /* Disable horizontal scrolling. */
+  }
+
   .page {
     margin-right: 16px;
   }
