--- a/editors/image-filters.html
+++ b/editors/image-filters.html
@@ -25,7 +25,8 @@
 	<img id="preview"
 			 crossorigin="anonymous" 
 			 slot="preview"
-	     src="[[_previewSrc]]"/>
+	     src="[[_previewSrc]]"
+	     on-load="__previewLoaded"/>
 
 
 	<iron-selector id="selector" 
