Video posters can now be edited by the image-editor and printed. Now preventing the browser context menu on long presses over the cropper area so the workflow is not interrupted.

--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -28,7 +28,8 @@
   }
 
   #pages {
-    width: 100vw; /* Disable horizontal scrolling. */
+    width:    100vw; /* Disable horizontal scrolling. */
+    overflow: unset; /* Don't break preview position:sticky; with an overflow setting. */
   }
 
   .page {
