--- a/sources/device-file-card.html
+++ b/sources/device-file-card.html
@@ -11,7 +11,12 @@
     width:            100%;
     padding:          16px;
     background:       var(--afs-gradient-background);
-  }  
+  }
+
+  #dropzone {
+    --dz-color:       var(--afs-gradient-secondary-text-color);
+    --dz-hover-color: var(--afs-gradient-secondary-text-color);
+  }
 
   #choose-btn {
     width:            100%;
