--- a/sources/web-file-card.html
+++ b/sources/web-file-card.html
@@ -12,8 +12,14 @@
     background: var(--afs-gradient-background);
   }
 
+  .shared-paper-input {
+    --paper-input-container-color:       var(--afs-gradient-secondary-text-color);
+    --paper-input-container-input-color: var(--afs-gradient-text-color);
+    --paper-input-container-focus-color: var(--afs-gradient-focus-color);
+  }
+
   #link-icon {
-    color: var(--app-primary-color);
+    color: var(--afs-gradient-focus-color);
   }
 
   #download-btn {
