--- a/app-file-system.html
+++ b/app-file-system.html
@@ -3,14 +3,26 @@
 
   :host {
 
-    --light-mode-gradient: var(--app-light-color) 100%;
-    --dark-mode-gradient:  var(--app-dark-color)  180%;
+    /* Available to adjust to taste to match app look and feel. */
+    --afs-light-mode-start-gradient: var(--app-background-color) 40%;
+    --afs-dark-mode-start-gradient:  var(--app-background-color) 40%;
 
-    --gradient-end: var(--light-mode-gradient);
+    /* Available to adjust to taste to match app look and feel. */
+    --afs-light-mode-end-gradient: var(--app-light-color) 100%;
+    --afs-dark-mode-end-gradient:  var(--app-dark-color)  180%;
+
+    /* Available to adjust to taste to match app look and feel. */
+    --afs-gradient-text-color:           var(--dark-text-color);
+    --afs-gradient-secondary-text-color: var(--secondary-text-color);
+    --afs-gradient-focus-color:          var(--app-primary-color);
+
+
+    --gradient-start: var(--afs-light-mode-start-gradient);
+    --gradient-end:   var(--afs-light-mode-end-gradient);
 
     --afs-gradient-background: radial-gradient(
       ellipse at top left, 
-      var(--app-background-color) 40%, 
+      var(--gradient-start), 
       var(--gradient-end)
     );
   }
