--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -48,7 +48,7 @@
     align-items: center;
     height:      32px;
     padding:     8px 8px 0px 8px;
-    color:       var(--dark-text-color);
+    color:       var(--afs-gradient-text-color);
   }
 
   #label-order {
@@ -74,7 +74,11 @@
 
   .label-stat {
     font-size: 12px;
-    color:     var(--secondary-text-color);
+    color:     var(--afs-gradient-secondary-text-color);
+  }
+
+  #moreBtn {
+    color: var(--afs-gradient-text-color);
   }
 
   /*Reordering Testing Only*/
