--- a/carousel/paginated-carousel.html
+++ b/carousel/paginated-carousel.html
@@ -2,10 +2,11 @@
 <style>
 
   :host {
-    display:  block;
-    position: absolute;
-    top:      0px;
-    height:   100vh;
+    display:     flex;
+    align-items: center;
+    position:    absolute;
+    top:         0px;
+    height:      100vh;
     
     /*
       iOS Safari fix for initial positioning being 
@@ -21,6 +22,7 @@
 
   app-carousel {
     height:           100%;
+    max-height:       568px;
     background-color: inherit;
   }
 
