Added a new overlay, called afs-video-viewer, which is opened from the file-editor launch icon button when viewing a video file item. This is used for video playback, especially to leverage the native fullscreen video control button. This is the first pass where all items are responsively designed for large screen devices. Updated deps.

--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -1,5 +1,10 @@
 
 <style>
+
+  :host {
+    --carousel-max-height: 568px;
+    --carousel-max-width:  1010px; /* 16:9 aspect. */
+  }
   
   #background {
     display:    none;
@@ -30,8 +35,10 @@
   /* Responsive design - large screen sizes. */
   #flip {
     position:   absolute;
-    max-height: 568px;
+    max-height: var(--carousel-max-height);
+    max-width:  var(--carousel-max-width);
     top:        unset;
+    left:       unset;
   }
 
   #overlay {
