--- a/editors/image-adjuster.html
+++ b/editors/image-adjuster.html
@@ -1,6 +1,12 @@
 
 <style include="app-shared-styles">
 
+	:host {
+		display: 					block;
+		min-height: 			100vh;
+    background-color: var(--app-body-color);
+	}
+
 	#content {
 		display: 							 grid;
     grid-template-columns: repeat(auto-fit, minmax(264px, 1fr));
