--- a/editors/image-cropper.html
+++ b/editors/image-cropper.html
@@ -1,6 +1,12 @@
 
 <style>
 
+	:host {
+		display: 					block;
+		min-height: 			100vh;
+    background-color: var(--app-body-color);
+	}
+
 	#top-row {
 		padding-top: 8px;
 	}
