--- a/editors/image-filters.html
+++ b/editors/image-filters.html
@@ -1,6 +1,12 @@
 
 <style>
 
+	:host {
+		display: 					block;
+		min-height: 			100vh;
+    background-color: var(--app-body-color);
+	}
+
 	#selector {
 		display: 							 grid;
 		grid-template-columns: repeat(auto-fit, minmax(128px, 1fr));
