--- a/lists/file-items.html
+++ b/lists/file-items.html
@@ -2,8 +2,10 @@
 <style>
 
   :host {
-    display: block;
-    padding: 16px;
+    display:   block;
+    margin:    0px auto;
+    max-width: 1024px;
+    padding:   16px;
   }
 
   #icon-container {
