--- a/app-file-system.html
+++ b/app-file-system.html
@@ -88,7 +88,12 @@
 </image-editor>
 
 
-<photo-viewer id="viewer"
+<afs-video-viewer id="videoViewer"
+                  item="[[_liveItem]]">
+</afs-video-viewer>
+
+
+<photo-viewer id="photoViewer"
               item="[[_liveItem]]">
 </photo-viewer>
 
