--- a/carousel/paginated-carousel.html
+++ b/carousel/paginated-carousel.html
@@ -2,11 +2,12 @@
 <style>
 
   :host {
-    display:     flex;
-    align-items: center;
-    position:    absolute;
-    top:         0px;
-    height:      100vh;
+    display:         flex;
+    justify-content: center;
+    align-items:     center;
+    position:        absolute;
+    top:             0px;
+    height:          100vh;
     
     /*
       iOS Safari fix for initial positioning being 
@@ -21,8 +22,9 @@
   }
 
   app-carousel {
-    height:           100%;
-    max-height:       568px;
+    height:     100%;
+    max-height: var(--carousel-max-height);
+    max-width:  var(--carousel-max-width);
     background-color: inherit;
   }
 
