--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -2,6 +2,8 @@
 <style>
 
   #overlay {
+    padding: 0px;
+
     --overlay-background-color: var(--app-body-color);
   }
 
@@ -22,27 +24,60 @@
   }
 
   #content {
-    height: calc(100vh - 128px);
+    display:            grid;
+    grid-template-rows: min-content;
+    min-height:         calc(100vh - 128px);    
+    padding:            32px 16px;
   }
 
   #content[hidden] {
     display: none;
   }
 
+  #types { 
+    width:          100%;
+    max-width:      568px; 
+    margin:         0px auto;  
+    padding-bottom: 16px;
+  }
+
   #grid {
     display:            grid;
-    grid-template-rows: min-content min-content 24px 1fr;
+    grid-template-rows: min-content 20px 1fr;
     grid-row-gap:       16px;
+    align-self:         center;
     height:             100%;
-    padding:            32px 16px;
+    width:              100%;
+    max-width:          568px;
+    margin:             0px auto;
+  }
+
+  .vert-aligned {
+    align-self: center;
   }
 
   #or {
     text-align: center;
   }
 
-  #content-div {
-    margin-bottom: 8px;
+  /* Larger than large mobile. */
+  @media (min-width: 1023px) {
+
+    #types {
+      text-align: center;
+    }
+
+    #grid {
+      grid-template-columns: 1fr 112px 1fr;
+      grid-template-rows:    unset;
+      height:                unset;
+      max-width:             1024px;
+    }
+
+    #deviceFileCard {
+      height: 300px;
+    }
+
   }
 
 </style>
@@ -83,21 +118,26 @@
                       list="[[list]]"
                       slot="top-toolbar-buttons-slot"
                       on-click="__listBtnClicked">
-    </list-icon-button>
+    </list-icon-button>    
 
 
     <div id="content"
          hidden="[[_hideContent]]" 
          slot="content">
 
-      <div id="grid">
-        <div>[[_acceptableTypes]]</div>
+      <div id="types">[[_acceptableTypes]]</div>
 
-        <web-file-card mimes="[[_mimes]]"
+
+      <div id="grid">
+        <web-file-card class="vert-aligned"
+                       mimes="[[_mimes]]"
                        on-file-added="__webFileAdded">
         </web-file-card>
 
-        <div id="or">OR</div>
+        <div id="or" 
+             class="vert-aligned">
+          OR
+        </div>
 
         <device-file-card id="deviceFileCard"
                           accept="[[accept]]"
@@ -109,6 +149,7 @@
                           on-files-added="__deviceFilesAdded">
         </device-file-card>
       </div>
+
 
       <file-sources-upload-actions-card id="actions"
                                         list="[[list]]"
