--- a/sources/web-file-card.html
+++ b/sources/web-file-card.html
@@ -2,14 +2,19 @@
 <style include="app-shared-styles">
 
   :host {
-    display: block;
+    display: flex;
+    height:  100%;
   }
 
   .shared-card {
-    padding:    16px;
-    position:   relative;
-    overflow:   hidden;
-    background: var(--afs-gradient-background);
+    display:         flex;
+    flex-direction:  column;
+    justify-content: space-between;
+    position:        relative;
+    width:           100%;
+    padding:         16px;
+    overflow:        hidden;
+    background:      var(--afs-gradient-background);
   }
 
   .shared-paper-input {
